<resources>
    <string name="app_name">Views_4</string>
    <string name="favorite">favorite</string>
    <string name="content_description_favorite">즐겨찾기</string>
    <string name="search">search</string>
    <string name="content_description_search">검색하기</string>
    <string name="more">more</string>
    <string name="content_description_more">기타</string>
    <string name="page_title">app title</string>
    <string name="header_title">Header title</string>
    <string name="header_text">header text</string>
</resources>