<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/favorite"
        android:icon="@drawable/ic_favorite_24dp"
        android:title="@string/favorite"
        android:contentDescription="@string/content_description_favorite"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_24dp"
        android:title="@string/search"
        android:contentDescription="@string/content_description_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/more"
        android:title="@string/more"
        android:icon="@drawable/ic_baseline_more_horiz_24"
        android:contentDescription="@string/content_description_more"
        app:showAsAction="ifRoom" />

</menu>
<!--    app:showAsAction="always" 항상 보이게-->
<!--    app:showAsAction="never" 항상 overflow에 표시-->
<!--    app:showAsAction="ifRoom" 여유공간이 되면 액션바에 표시-->
<!--    app:showAsAction="withText" 숨겨진 메뉴로 표시되는듯 ...-->